prevent sitemap behind sidebar, another attempt

--- a/docs/assets/css/help.css
+++ b/docs/assets/css/help.css
@@ -30,7 +30,9 @@ figcaption { text-align: center; background-color: #ddd; border-radius: 3px; mar
 .show { display: block; }
 
 @only screen and (min-width: 768px) and(max-width: 959px) {
-    -ms-transform: scale(0.71, 0.71); /* IE 9 */
-    -webkit-transform: scale(0.71, 0.71); /* Safari */
-    transform: scale(0.71, 0.71);
+  #main-content svg {
+    -ms-transform: translate(-88px, -80px) scale(0.75, 0.75) /* IE 9 */
+    -webkit-transform: translate(-88px, -80px) scale(0.75, 0.75) /* Safari */
+    transform: translate(-88px, -80px) scale(0.75, 0.75)
+  }
 }
